# AsynchronousGA4

./: .gitignore  README.md
AsynchronousGA4/: CMakeLists.txt  ClearablePlainTextEdit.h  GAParametersDialog.cpp  GAParametersDialog.h  GAParametersDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MergeUtil.h  MergeXML.cpp  MergeXML.h  Resources.qrc  TextEditDialog.cpp  Utilities.cpp  Utilities.h  XMLContainer.cpp  XMLContainer.h  XMLContainerList.cpp  XMLContainerList.h  XMLConverter.cpp  XMLConverter.h  main.cpp
AsynchronousGA4/Images/: resize_for_icon.jsx  win_icon.sh
AsynchronousGA4NoUI/: CMakeLists.txt  Wrapper.cpp  Wrapper.h  main.cpp
asio-1.18.2/include/asio/: awaitable.hpp
rapidxml-1.13/: rapidxml_print.hpp
singularity/: asynchronousga4cl_static_singularity.def
src/: ArgParse.cpp  ArgParse.h  DataFile.cpp  DataFile.h  GAASIO.cpp  GAASIO.h  Genome.cpp  Genome.h  Mating.cpp  Mating.h  Population.cpp  Population.h  Preferences.cpp  Preferences.h  Random.cpp  Random.h
terminal/: CMakeLists.txt
tests/: RandomTest.cpp  plot_random_test.py
